start css homepage

--- a/index.html
+++ b/index.html
@@ -37,40 +37,46 @@
 
 	<main>
 		<section class="allQuotes">
-			<p><q>Actuellement, l'homme mène une guerre contre la nature. S'il gagne, il est perdu </q>- Hubert Reeves</p>
-			<p><q>C'est dans les utopies d'aujourd'hui que sont les solutions de demain </q>- Pierre Rabhi</p>
+			<div class="blockquote">
+				<p class="blockquote-content">Actuellement, l'homme mène une guerre contre la nature. S'il gagne, il est perdu.</p>
+				<p class="blockquote-author">- Hubert Reeves</p>
+			</div>
+			<div class="blockquote">
+				<p class="blockquote-content">C'est dans les utopies d'aujourd'hui que sont les solutions de demain.</p>
+				<p class="blockquote-author">- Pierre Rabhi</p>
+			</div>
 		</section>
 
 		<section class="welcome">
 			<h1>Bienvenue les jardiniers,</h1>
-			<p>Le Potager Partagé offre la possibilité, à tous, de disposer d’une parcelle de terre afin de cultiver fruits, fleurs, légumes à sa guise. Et cela au sein d’un groupe d’amoureux de la nature qui repose sur la tolérance, l’échange et le partage.</p>
-			<p>Outre le fait de travailler la terre, c’est un lieu de convivialité, d’entraide et de partage que nous vous proposons. Un espace agréable, hors du béton et de la ville où chacun pourra se ressourcer et tisser de nouveaux liens.</p>
-			<p>La permaculture au potager vous intéresse ? l’idée d’un jardin éco responsable vous tient à cœur ? Envie de vous détendre dans un cadre verdoyant ? Alors venez nous rejoindre …</p>
+			<p class="lil-margin-b">Le Potager Partagé offre la possibilité, à tous, de disposer d’une parcelle de terre afin de cultiver fruits, fleurs, légumes à sa guise. Et cela au sein d’un groupe d’amoureux de la nature qui repose sur la tolérance, l’échange et le partage.</p>
+			<p class="lil-margin-b">Outre le fait de travailler la terre, c’est un lieu de convivialité, d’entraide et de partage que nous vous proposons. Un espace agréable, hors du béton et de la ville où chacun pourra se ressourcer et tisser de nouveaux liens.</p>
+			<p class="lil-margin-b">La permaculture au potager vous intéresse ? l’idée d’un jardin éco responsable vous tient à cœur ? Envie de vous détendre dans un cadre verdoyant ? Alors venez nous rejoindre …</p>
 		</section>
 
 		<section class="values">
-			<div class="value">
-				<h2>Un projet éco-responsable</h2>
+			<div class="value margin-b">
+				<h2 class="lil-margin-b">Un projet éco-responsable</h2>
 				<p>Les jardiniers se partagent la gestion du jardin dans un esprit de convivialité et avec la volonté de cultiver dans le respect de la terre et de la biodiversité.</p>
 			</div>
-			<div class="value">
-				<h2>Collectif et semi-collectif</h2>
+			<div class="value margin-b">
+				<h2 class="lil-margin-b">Collectif et semi-collectif</h2>
 				<p>Le jardin est partagé entre parcelles individuelles et parcelles collectives. Chacun est libre de choisir son terrain de jeu.</p>
 			</div>
-			<div class="value">
-				<h2>De tous niveaux</h2>
+			<div class="value margin-b">
+				<h2 class="lil-margin-b">De tous niveaux</h2>
 				<p>Nos jardiniers ne sont pas tous expérimentés. Certains débutent, mais tous partagent le désir de cultiver la terre de manière naturelle (Pas d’engrais, de pesticides …)</p>
 			</div>
-			<div class="value">
-				<h2>Le partage avant tout</h2>
+			<div class="value margin-b">
+				<h2 class="lil-margin-b">Le partage avant tout</h2>
 				<p>Ce projet met en avant l’entraide et le partage. Que ce soit le savoir-faire, les techniques de culture, les graines, plantes … Ensemble nous pouvons atteindre nos objectifs individuels et collectifs.</p>
 			</div>
-			<div class="value">
-				<h2>Le respect</h2>
+			<div class="value margin-b">
+				<h2 class="lil-margin-b">Le respect</h2>
 				<p>Nous respectons la terre, l’eau, la quiétude du lieu, la faune, la flore et notre prochain. C’est à ce prix que notre société sera pérenne.</p>
 			</div>
-			<div class="value">
-				<h2>Ensemble</h2>
+			<div class="value margin-b">
+				<h2 class="lil-margin-b">Ensemble</h2>
 				<p>Les décisions, les actions et collaborations diverses sont décidées en collectivité pour le bien de tous et du projet. </p>
 			</div>
 		</section>
@@ -78,9 +84,9 @@
 		<hr>
 
 		<section class="localisation">
-			<p>Ce jardin extraordinaire se situe à la rue Defuisseaux à 7333 TERTRE.</p>
+			<p class="adress">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
 			<p>Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
-			<p><i>GOOGLE MAP</i></p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d897.832904494626!2d3.8146685079991567!3d50.4698737841196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c25770b4daebb9%3A0xf3b60d889e4a13f5!2sRue%20Defuisseaux%2C%207333%20Saint-Ghislain%2C%20Belgique!5e0!3m2!1sfr!2sfr!4v1653067987880!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</section>
 
 		<hr>
