--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<li class="li-nav"><a href="./pages/detendez.html">Détendez-vous!</a></li>
 					<li class="li-nav"><a href="./pages/ateliers.html">Nos ateliers</a></li>
 					<li class="li-nav"><a href="./pages/galerie.html">Galerie</a></li>
-					<li class="li-nav"><a href="./pages/bourse.html">Bourse aux plantes</a></li>
+					<li class="li-nav"><a href="./pages/bourse.html">Notre petit marché</a></li>
 					<li class="li-nav"><a href="./pages/partages.html">Nos partages</a></li>
 					<li class="li-nav"><a href="./pages/contact.html">Contact</a></li>
 				</ul>
@@ -41,7 +41,7 @@
 				<p class="blockquote-content">Actuellement, l'homme mène une guerre contre la nature. S'il gagne, il est perdu.</p>
 				<p class="blockquote-author">- Hubert Reeves</p>
 			</div>
-			<div class="blockquote">
+			<div class="blockquote displayDesk">
 				<p class="blockquote-content">C'est dans les utopies d'aujourd'hui que sont les solutions de demain.</p>
 				<p class="blockquote-author">- Pierre Rabhi</p>
 			</div>
@@ -49,8 +49,8 @@
 
 		<section class="welcome">
 			<h1>Bienvenue les jardiniers,</h1>
-			<p class="lil-margin-b">Le Potager Partagé offre la possibilité, à tous, de disposer d’une parcelle de terre afin de cultiver fruits, fleurs, légumes à sa guise. Et cela au sein d’un groupe d’amoureux de la nature qui repose sur la tolérance, l’échange et le partage.</p>
-			<p class="lil-margin-b">Outre le fait de travailler la terre, c’est un lieu de convivialité, d’entraide et de partage que nous vous proposons. Un espace agréable, hors du béton et de la ville où chacun pourra se ressourcer et tisser de nouveaux liens.</p>
+			<p class="lil-margin-b">Le Potager Partagé a été créé en avril 2022. Il offre la possibilité, à tous, de disposer d’une parcelle de terre afin de cultiver fruits, fleurs, légumes à sa guise. Cela au sein d’un groupe d’amoureux de la nature qui repose sur la tolérance, le respect et le partage.</p>
+			<p class="lil-margin-b">Outre le fait de travailler la terre, c’est un lieu de convivialité et d’entraide que nous vous proposons. Un espace agréable, hors du béton et de la ville où chacun pourra se ressourcer et tisser des liens nouveaux.</p>
 			<p class="lil-margin-b">La permaculture au potager vous intéresse ? l’idée d’un jardin éco responsable vous tient à cœur ? Envie de vous détendre dans un cadre verdoyant ? Alors venez nous rejoindre …</p>
 		</section>
 
@@ -83,36 +83,34 @@
 
 		<hr>
 
-		<section class="localisation">
-			<p class="adress">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
-			<p>Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d897.832904494626!2d3.8146685079991567!3d50.4698737841196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c25770b4daebb9%3A0xf3b60d889e4a13f5!2sRue%20Defuisseaux%2C%207333%20Saint-Ghislain%2C%20Belgique!5e0!3m2!1sfr!2sfr!4v1653067987880!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-		</section>
-
-		<hr>
-
 		<section class="philosophie">
-			<h2>Notre Philosophie du Jardin</h2>
-			<p>Né d’une démarche citoyenne, le Potager Partagé se base sur un sombre constat : Les crises que nous traversons et la société actuelle nous éloignent des choses primordiales de la vie. Le contact avec la faune et la flore, le respect de la nature, les liens sociaux sont autant de points qui se font de plus en plus rares.</p>
-			<p>Il était temps pour nous de réagir, de faire notre part pour améliorer cela. Ce jardin collectif permet  à tous de retrouver un “nid douillet ”, un cadre verdoyant où l’aspect communautaire, le respect et le partage nous permettront de nous ressourcer.</p>
+			<h2 class="lil-margin-b">Notre Philosophie du Jardin</h2>
+			<p class="lil-margin-b">Né d’une démarche citoyenne, le Potager Partagé se base sur un sombre constat : Les crises que nous traversons et la société actuelle nous éloignent des choses primordiales de la vie. Le contact avec la faune et la flore, le respect de la nature, les liens sociaux sont autant de points qui se font de plus en plus rares.</p>
+			<p class="lil-margin-b">Il était temps pour nous de réagir, de faire notre part pour améliorer cela. Ce jardin collectif permet  à tous de retrouver un “nid douillet ”, un cadre verdoyant où l’aspect communautaire, le respect et le partage nous permettront de nous ressourcer.</p>
 			<img src="./images/lien-social-web.jpg" alt="">
 			<img src="./images/ruisseau-pont.jpg" alt="">
-			<img src="./images/ce-quapporte-le.jpg" alt="">
+			<img src="./images/ce-quapporte.png" alt="" class="mix-multiply">
 
 		</section>
 
 		<hr>
 
 		<section class="goals">
-			<h2>Nos Objectifs</h2>
+			<h2 class="lil-margin-b">Nos Objectifs</h2>
 			<ul>
-				<li>Mettre des parcelles de terre à disposition pour y cultiver des légumes, des fruits,  des plantes et des fleurs dans une optique de respect de l’environnement et de développement durable.</li>
-				<li>Offrir aux membres l’occasion de pratiquer une activité saine de plein air et de se procurer des aliments frais et sains.</li>
-				<li>Développer une bulle de nature ouverte à tous les visiteurs pour une balade, un moment de détente ou une rencontre.</li>
-				<li>Promouvoir l’écologie, l’alimentation durable, l’économie de l’eau, le recyclage et la gestion des déchets naturels, la biodiversité.</li>
-				<li>Renforcer le lien social, favoriser les échanges, l’entraide, le dialogue non violent et la convivialité…. si importants dans le développement de chacun d’entre nous.</li>
-				<li>Sensibiliser les enfants (mais aussi les adultes) à la nature, à l'écologie et au recyclage.</li>
-				<li>Développer un pôle écologique en vue de la création d’évènements rythmant la vie locale (Fêtes de quartiers, ateliers pédagogiques en permaculture, pique-niques …)</li>
+				<li class="lil-margin-b"><span class="first-letter">M</span>ettre des parcelles de terre à disposition pour y cultiver des légumes, des fruits,  des plantes et des fleurs dans une optique de respect de l’environnement et de développement durable.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">O</span>ffrir aux membres l’occasion de pratiquer une activité saine de plein air et de se procurer des aliments frais et sains.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">D</span>évelopper une bulle de nature ouverte à tous les visiteurs pour une balade, un moment de détente ou une rencontre.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">P</span>romouvoir l’écologie, l’alimentation durable, l’économie de l’eau, le recyclage et la gestion des déchets naturels, la biodiversité.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">R</span>enforcer le lien social, favoriser les échanges, l’entraide, le dialogue non violent et la convivialité…. si importants dans le développement de chacun d’entre nous.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">S</span>ensibiliser les enfants (mais aussi les adultes) à la nature, à l'écologie et au recyclage.</li>
+				<img src="./images/feuille.jpg" alt="" class="anim-feuille">
+				<li class="lil-margin-b"><span class="first-letter">D</span>évelopper un pôle écologique en vue de la création d’évènements rythmant la vie locale (Fêtes de quartiers, ateliers pédagogiques en permaculture, pique-niques …)</li>
 			</ul>
 		</section>
 
@@ -128,6 +126,14 @@
 				<li>Le jardin pour tous (accès et potager adaptés aux personnes à mobilité réduite), les toilettes sèches, les collaborations avec des associations de la régions ….</li>
 			</ul>
 			<p>….  Toute idée peut nous aider, n’hésitez pas à nous la partager ! (Link vers formulaire/mail de contact /idée)</p>
+		</section>
+
+		<hr>
+
+		<section class="localisation">
+			<p class="adress">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
+			<p>Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d897.832904494626!2d3.8146685079991567!3d50.4698737841196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c25770b4daebb9%3A0xf3b60d889e4a13f5!2sRue%20Defuisseaux%2C%207333%20Saint-Ghislain%2C%20Belgique!5e0!3m2!1sfr!2sfr!4v1653067987880!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</section>
 	</main>
 
