advance multiples pages

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 					<li class="li-nav"><a href="./pages/detendez.html">Détendez-vous!</a></li>
 					<li class="li-nav"><a href="./pages/ateliers.html">Nos ateliers</a></li>
 					<li class="li-nav"><a href="./pages/galerie.html">Galerie</a></li>
-					<li class="li-nav"><a href="./pages/bourse.html">Notre petit marché</a></li>
 					<li class="li-nav"><a href="./pages/partages.html">Nos partages</a></li>
 					<li class="li-nav"><a href="./pages/contact.html">Contact</a></li>
 				</ul>
@@ -117,28 +116,54 @@
 		<hr>
 
 		<section class="actions">
-			<p>Pour y parvenir, toutes les actions (petites ou importantes ont leur importance) :</p>
-			<ul>
+			<p class="lil-margin-b">Pour y parvenir, toutes les actions <span class="span-itl">(petites ou importantes)</span> ont leur importance :</p>
+			<ul class="lil-margin-b">
 				<li>L’échange et le partage mis en avant (Link vers page annonce/échange)</li>
 				<li>Compostez avec nous ! (Link vers page annonce/échange)</li>
 				<li>Stop ! Détendez vous … (Link vers page annonce/échange)</li>
 				<li>Des ateliers pédagogiques (Link vers page annonce/échange)</li>
 				<li>Le jardin pour tous (accès et potager adaptés aux personnes à mobilité réduite), les toilettes sèches, les collaborations avec des associations de la régions ….</li>
 			</ul>
-			<p>….  Toute idée peut nous aider, n’hésitez pas à nous la partager ! (Link vers formulaire/mail de contact /idée)</p>
+			<p>... Toute idée peut nous aider, n’hésitez pas à nous la partager ! (Link vers formulaire/mail de contact /idée)</p>
 		</section>
 
 		<hr>
 
 		<section class="localisation">
-			<p class="adress">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
-			<p>Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d897.832904494626!2d3.8146685079991567!3d50.4698737841196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c25770b4daebb9%3A0xf3b60d889e4a13f5!2sRue%20Defuisseaux%2C%207333%20Saint-Ghislain%2C%20Belgique!5e0!3m2!1sfr!2sfr!4v1653067987880!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-		</section>
+			<p class="adress lil-margin-b">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
+			<p class="lil-margin-b">Il est accessible facilement depuis la servitude de passage menant à l’école Saint-Joseph au numéro 44 de la même rue.</p>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>		</section>
 	</main>
 
-	<footer>
+	<hr>
 
+	<footer>
+		<div class="logo-header">
+			<a href="index.html">
+				<img class="picto-logo" src="images/logo-txt.png" alt="Logo du Jardin Potager">
+			</a>
+		</div>
+		<h2>SOYONS  SOLIDAIRES  ET  NON  SOLITAIRES</h2>
+
+		<section class="allQuotes">
+			<div class="blockquote">
+				<p class="blockquote-content">“Un jour, dit la légende, il y eut un immense incendie de forêt. 
+					Tous les animaux terrifiés et atterrés, observaient impuissants le désastre.
+					Seul le petit colibri s’activait, allant chercher quelques gouttes d’eau dans son bec pour les jeter sur le feu.
+					Au bout d’un moment, le tatou, agacé par ses agissements dérisoires, lui dit :
+					<span>-”Colibri, tu n'es pas fou ? Tu crois que c’est avec ces quelques gouttes d’eau que tu vas éteindre le feu ?”</span>
+					<span>- “Qu’importe, répondit le colibri … je fais ma part.”</span></p>
+				<p class="blockquote-author">- Pierre Rabhi</p>
+			</div>
+		</section>
+
+		<section class="link">
+			<p><a href="./pages/galerie.html">Galerie</a></p>
+			<p><a href="./pages/bourse.html">Notre bon coin</a></p>
+			<p><a href="https://www.facebook.com/groups/348710417268671">Facebook</a></p>
+			<p><a href="https://www.youtube.com/channel/UC5xYo2Wz-glybwNWbY6y9dA">Youtube</a></p>
+			<p><a href="https://discord.gg/b2tM2G27">Discord</a></p>
+		</section>
 	</footer>
 	<script src="js/menu_burger.js"></script>
 </body>
