--- a/pages/compostez.html
+++ b/pages/compostez.html
@@ -22,7 +22,6 @@
 					<li class="li-nav"><a href="detendez.html">Détendez-vous!</a></li>
 					<li class="li-nav"><a href="ateliers.html">Nos ateliers</a></li>
 					<li class="li-nav"><a href="galerie.html">Galerie</a></li>
-					<li class="li-nav"><a href="bourse.html">Bourse aux plantes</a></li>
 					<li class="li-nav"><a href="partages.html">Nos partages</a></li>
 					<li class="li-nav"><a href="contact.html">Contact</a></li>
 				</ul>
@@ -37,26 +36,25 @@
 
 	<main>
         <h1>Compostez avec nous !</h1>
-
-        <p>Le compostage est utilisé par l’homme depuis des millénaires. Une des premières références à l'utilisation du compost en agriculture remonte à des tablettes d'argile gravées de l'​Empire Acadien en Mésopotamie​, mille ans avant Moïse​ ! Les Romains ​en connaissaient la technique, les Grecs et les tribus d'Israël en parlent. Les Chinois ont appliqué les principes du compostage de tout temps.</p>
-	
-        <h2>Alors pourquoi pas vous ?</h2>
+        <p class="lil-margin-b">Le compostage est utilisé par l’homme depuis des millénaires. Une des premières références à l'utilisation du compost en agriculture remonte à des tablettes d'argile gravées de l'​Empire Acadien en Mésopotamie​, mille ans avant Moïse​ ! Les Romains ​en connaissaient la technique, les Grecs et les tribus d'Israël en parlent. Les Chinois ont appliqué les principes du compostage de tout temps.</p>
         
-        <p>Le compost est un mélange de matières organiques en décomposition. Un savant équilibre d’azote et de carbone. En forêt, une plante dépérit, meurt et retourne à la terre en se décomposant sur place. Le sol se régénère ainsi, grâce à tous les débris végétaux devenant de l’humus.</p>
-        
-        <h2>Ensemble, nous pouvons le faire</h2>
-
-        <p>Une zone de compostage citoyenne est accessible à l’entrée du jardin. </p>
-
-        <p>Vous êtes tous les bienvenus pour y déposer vos déchets organiques compostables et ainsi participer à l’amélioration du sol de notre jardin. Venez déposer vos déchets verts (Tontes de pelouse, tailles de haies, broyats végétaux mais pas de résineux) au lieu de faire la file au centre de recyclage. <strong>Vous pourrez donc réaliser de réelles économies de temps et d’argent</strong>, tout en faisant un geste pour l’environnement.</p>
-
-        <p><strong>Afin que notre action soit viable, jouez le jeu : respectez les déchets compostables.</strong> (N’hésitez pas à interpeller un jardinier présent si vous désirez des explications plus précises)</p>
-
-        <img src="../images/composteur.jpg" alt="">
-
+        <div class="value">
+            <h2 class="lil-margin-b">Alors pourquoi pas vous ?</h2>
+            <p>Le compost est un mélange de matières organiques en décomposition. Un savant équilibre d’azote et de carbone. En forêt, une plante dépérit, meurt et retourne à la terre en se décomposant sur place. Le sol se régénère ainsi, grâce à tous les débris végétaux devenant de l’humus.</p>
+        </div>
+        <hr>
+        <div class="together">
+            <h2 class="lil-margin-b">Ensemble, nous pouvons le faire !</h2>
+            <p class="lil-margin-b">Une zone de compostage citoyenne est accessible à l’entrée du jardin. </p>
+            <p class="lil-margin-b">Vous êtes tous les bienvenus pour y déposer vos déchets organiques compostables et ainsi participer à l’amélioration du sol de notre jardin. Venez déposer vos déchets verts (Tontes de pelouse, tailles de haies, broyats végétaux mais pas de résineux) au lieu de faire la file au centre de recyclage. <strong>Vous pourrez donc réaliser de réelles économies de temps et d’argent</strong>, tout en faisant un geste pour l’environnement.</p>
+        </div>
+        <hr>
+        <h2 class="lil-margin-b value">Afin que notre action soit viable, jouez le jeu : respectez les déchets compostables.</h2>
+        <p class="lil-margin-b itl">(N’hésitez pas à interpeller un jardinier présent si vous désirez des explications plus précises)</p>
+        <img class="lil-margin-b" src="../images/composteur.jpg" alt="">
         <section class="compostes">
             <article>
-                <h3>😀Composter les matières vertes, molles et humides = Azote</h3>
+                <h3 class="lil-margin-b"><span class="lil-margin-b">😀</span>Composter les matières vertes, molles et humides = Azote</h3>
                 <ul>
                     <li>Épluchures et déchets de fruits et légumes.</li>
                     <li>Marc de café avec le filtre en papier. Les pads en papier peuvent également être mis au compost. On les déchire d’abord, afin de permettre une décomposition plus facile. Sachets et feuilles de thé. Sauf les sachets en matière synthétique.</li>
@@ -69,7 +67,7 @@
                 </ul>
             </article>
             <article>
-                <h3>😀Composter les matières brunes, dures et sèches = Carbone</h3>
+                <h3 class="lil-margin-b"><span class="lil-margin-b">😀</span>Composter les matières brunes, dures et sèches = Carbone</h3>
                 <ul>
                     <li>Papiers, cartons et tissus cellulosiques. Par exemple les mouchoirs en papier, essuie-tout, feuilles de papier journal où on a épluché des légumes, etc. On évite toutes les parties colorées qui peuvent contenir des métaux lourds.</li>
                     <li>Bois de taille et broussailles. Ils ne se décomposent bien qu'après broyage ou s'ils sont coupés finement. </li>
@@ -82,7 +80,7 @@
                 </ul>
             </article>
             <article>
-                <h3>🙁😖Matières non compostables !</h3>
+                <h3 class="lil-margin-b"><span class="lil-margin-b"  >🙁😖</span>Matières non compostables !</h3>
                 <ul>
                     <li>Huiles et graisses alimentaires.</li>
                     <li>Bois de menuiserie et bois traité.</li>
