--- a/pages/detendez.html
+++ b/pages/detendez.html
@@ -22,7 +22,6 @@
 					<li class="li-nav"><a href="detendez.html">Détendez-vous!</a></li>
 					<li class="li-nav"><a href="ateliers.html">Nos ateliers</a></li>
 					<li class="li-nav"><a href="galerie.html">Galerie</a></li>
-					<li class="li-nav"><a href="bourse.html">Bourse aux plantes</a></li>
 					<li class="li-nav"><a href="partages.html">Nos partages</a></li>
 					<li class="li-nav"><a href="contact.html">Contact</a></li>
 				</ul>
@@ -35,18 +34,18 @@
 		</nav>
 	</header>
 
-	<main>
+	<main class="detente">
         <h1>Stop ! Détendez-vous ...</h1>
 
-        <p>Pour 5 minutes ou pour la journée, notre jardin est ouvert au public.</p>
+        <p class="margin-b value">Notre jardin est ouvert au public.</p>
 
-        <p>Venez passer avec nous votre “temps de midi”, vous détendre après une journée de boulot ou passer un moment le week-end … L’espace détente aménagé permet à tous de décompresser dans un lieu calme et verdoyant. </p>
+        <p class="lil-margin-b">Venez passer avec nous votre “temps de midi”, vous détendre après une journée de boulot ou passer un moment le week-end … L’espace détente aménagé permet à tous de décompresser dans un lieu calme et verdoyant. </p>
 
-        <p>Que ce soit pour bouquiner à l’ombre, parcourir le jardin,  faire une sieste ou bronzer au soleil à côté du petit étang, chacun peut y trouver son compte. Des chaises, des transats, table, parasol, barbecue permettront d’apprécier ce moment de quiétude en pleine nature.</p>
+        <p class="lil-margin-b">Que ce soit pour bouquiner à l’ombre, parcourir le jardin,  faire une sieste ou bronzer au soleil à côté du petit étang, chacun peut y trouver son compte. Des chaises, des transats, table, parasol, barbecue permettront d’apprécier ce moment de quiétude en pleine nature.</p>
     
-        <p>Cet espace est  un atout important pour apprécier la dolce vita, créer des liens, échanger et donc resserrer le tissu social. Le jardin reste un lieu parfait pour engager une conversation autour des plantes, fleurs et animaux qui y vivent … et qui sait ? susciter des vocations ?</p>
+        <p class="lil-margin-b">Cet espace est  un atout important pour apprécier la dolce vita, créer des liens, échanger et donc resserrer le tissu social. Le jardin reste un lieu parfait pour engager une conversation autour des plantes, fleurs et animaux qui y vivent … et qui sait ? susciter des vocations ?</p>
 
-        <p>Il vous sera demandé de garder vos animaux en laisse et de respecter la quiétude du jardin, pour le bien de tous.</p>
+        <div class="lil-margin-b warning">Il vous sera demandé de garder vos animaux en laisse et de respecter la quiétude du jardin, pour le bien de tous.</div>
 
         <img src="../images/sieste-jardin.jpg" alt="">
 
