--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,7 +22,6 @@
 					<li class="li-nav"><a href="detendez.html">Détendez-vous!</a></li>
 					<li class="li-nav"><a href="ateliers.html">Nos ateliers</a></li>
 					<li class="li-nav"><a href="galerie.html">Galerie</a></li>
-					<li class="li-nav"><a href="bourse.html">Bourse aux plantes</a></li>
 					<li class="li-nav"><a href="partages.html">Nos partages</a></li>
 					<li class="li-nav"><a href="contact.html">Contact</a></li>
 				</ul>
@@ -36,7 +35,17 @@
 	</header>
 
 	<main>
+		<h1>Contact</h1>
 
+		<section class="contact-loca">
+			<h2>Retrouvez-nous</h2>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>		</section>
+		</section>
+
+		<section class="press-room">
+			<h2>Ils parlent de nous</h2>
+			<p>press room ?</p>
+		</section>
     </main>
 
 	<footer>
