modif and add slider

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -34,23 +34,67 @@
 		</nav>
 	</header>
 
-	<main>
+	<main class="contact">
 		<h1>Contact</h1>
+		<p class="lil-margin-b">Si vous souhaitez me contacter pour......</p>
+		<p class="lil-margin-b">Numéro de téléphone (icon) : </p>
+		<p class="lil-margin-b">Adresse email (icon) : </p>
+		
+		<hr>
 
-		<section class="contact-loca">
-			<h2>Retrouvez-nous</h2>
+		<section class="contact-loca lil-margin-b">
+			<h2 class="lil-margin-b">Retrouvez-nous</h2>
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>		</section>
 		</section>
 
+		<hr>
+
 		<section class="press-room">
-			<h2>Ils parlent de nous</h2>
-			<p>press room ?</p>
+			<h2 class="lil-margin-b">Ils parlent de nous</h2>
+
+			<article class="lil-margin-b">
+				<h3 class="lil-margin-b">Article de Press du journal La Province.</h3>
+				<img src="../images/press/press-1.jpg" alt="Article de Press du journal La Province sur le potager collectif">
+			</article>
+
+			<article class="lil-margin-b">
+				<h3 class="lil-margin-b">Reportage de TéléMB sur la nature.</h3>
+				<a href="https://www.telemb.be/article/saint-ghislain-projet-citoyen-pour-remettre-la-nature-au-centre-du-debat?fbclid=IwAR3NnGXmu10Zn1C1JO5pLE95WwYT5dgZlLukFnzIDjDGWDRyx-Qnj8Z51g4"><p>Saint-Ghislain - Projet citoyen pour remettre la nature au centre du débat</p></a>
+			</article>
 		</section>
     </main>
 
+	<hr>
+
 	<footer>
-		
+		<div class="logo-header">
+			<a href="../index.html">
+				<img class="picto-logo" src="../images/logo-txt.png" alt="Logo du Jardin Potager">
+			</a>
+		</div>
+		<h2>SOYONS  SOLIDAIRES  ET  NON  SOLITAIRES</h2>
+
+		<section class="allQuotes">
+			<div class="blockquote">
+				<p class="blockquote-content">“Un jour, dit la légende, il y eut un immense incendie de forêt. 
+					Tous les animaux terrifiés et atterrés, observaient impuissants le désastre.
+					Seul le petit colibri s’activait, allant chercher quelques gouttes d’eau dans son bec pour les jeter sur le feu.
+					Au bout d’un moment, le tatou, agacé par ses agissements dérisoires, lui dit :
+					<span>-”Colibri, tu n'es pas fou ? Tu crois que c’est avec ces quelques gouttes d’eau que tu vas éteindre le feu ?”</span>
+					<span>- “Qu’importe, répondit le colibri … je fais ma part.”</span></p>
+				<p class="blockquote-author">- Pierre Rabhi</p>
+			</div>
+		</section>
+
+		<section class="link">
+			<p><a href="./pages/galerie.html">Galerie</a></p>
+			<p><a href="./pages/bourse.html">Notre bon coin</a></p>
+			<p><a href="https://www.facebook.com/groups/348710417268671">Facebook</a></p>
+			<p><a href="https://www.youtube.com/channel/UC5xYo2Wz-glybwNWbY6y9dA">Youtube</a></p>
+			<p><a href="https://discord.gg/b2tM2G27">Discord</a></p>
+		</section>
 	</footer>
+
 	<script src="../js/menu_burger.js"></script>
 </body>
 </html>
