--- a/pages/compostez.html
+++ b/pages/compostez.html
@@ -37,14 +37,10 @@
 	<main>
         <h1>Compostez avec nous !</h1>
         <p class="lil-margin-b">Le compostage est utilisé par l’homme depuis des millénaires. Une des premières références à l'utilisation du compost en agriculture remonte à des tablettes d'argile gravées de l'​Empire Acadien en Mésopotamie​, mille ans avant Moïse​ ! Les Romains ​en connaissaient la technique, les Grecs et les tribus d'Israël en parlent. Les Chinois ont appliqué les principes du compostage de tout temps.</p>
+        <p class="lil-margin-b">Le compost est un mélange de matières organiques en décomposition. Un savant équilibre d’azote et de carbone. En forêt, une plante dépérit, meurt et retourne à la terre en se décomposant sur place. Le sol se régénère ainsi, grâce à tous les débris végétaux devenant de l’humus.</p>
         
         <div class="value">
             <h2 class="lil-margin-b">Alors pourquoi pas vous ?</h2>
-            <p>Le compost est un mélange de matières organiques en décomposition. Un savant équilibre d’azote et de carbone. En forêt, une plante dépérit, meurt et retourne à la terre en se décomposant sur place. Le sol se régénère ainsi, grâce à tous les débris végétaux devenant de l’humus.</p>
-        </div>
-        <hr>
-        <div class="together">
-            <h2 class="lil-margin-b">Ensemble, nous pouvons le faire !</h2>
             <p class="lil-margin-b">Une zone de compostage citoyenne est accessible à l’entrée du jardin. </p>
             <p class="lil-margin-b">Vous êtes tous les bienvenus pour y déposer vos déchets organiques compostables et ainsi participer à l’amélioration du sol de notre jardin. Venez déposer vos déchets verts (Tontes de pelouse, tailles de haies, broyats végétaux mais pas de résineux) au lieu de faire la file au centre de recyclage. <strong>Vous pourrez donc réaliser de réelles économies de temps et d’argent</strong>, tout en faisant un geste pour l’environnement.</p>
         </div>
@@ -97,8 +93,35 @@
         </section>
     </main>
 
+	<hr>
+
 	<footer>
-		
+		<div class="logo-header">
+			<a href="../index.html">
+				<img class="picto-logo" src="../images/logo-txt.png" alt="Logo du Jardin Potager">
+			</a>
+		</div>
+		<h2>SOYONS  SOLIDAIRES  ET  NON  SOLITAIRES</h2>
+
+		<section class="allQuotes">
+			<div class="blockquote">
+				<p class="blockquote-content">“Un jour, dit la légende, il y eut un immense incendie de forêt. 
+					Tous les animaux terrifiés et atterrés, observaient impuissants le désastre.
+					Seul le petit colibri s’activait, allant chercher quelques gouttes d’eau dans son bec pour les jeter sur le feu.
+					Au bout d’un moment, le tatou, agacé par ses agissements dérisoires, lui dit :
+					<span>-”Colibri, tu n'es pas fou ? Tu crois que c’est avec ces quelques gouttes d’eau que tu vas éteindre le feu ?”</span>
+					<span>- “Qu’importe, répondit le colibri … je fais ma part.”</span></p>
+				<p class="blockquote-author">- Pierre Rabhi</p>
+			</div>
+		</section>
+
+		<section class="link">
+			<p><a href="./pages/galerie.html">Galerie</a></p>
+			<p><a href="./pages/bourse.html">Notre bon coin</a></p>
+			<p><a href="https://www.facebook.com/groups/348710417268671">Facebook</a></p>
+			<p><a href="https://www.youtube.com/channel/UC5xYo2Wz-glybwNWbY6y9dA">Youtube</a></p>
+			<p><a href="https://discord.gg/b2tM2G27">Discord</a></p>
+		</section>
 	</footer>
 	<script src="../js/menu_burger.js"></script>
 </body>
