--- a/pages/detendez.html
+++ b/pages/detendez.html
@@ -51,8 +51,35 @@
 
     </main>
 
+	<hr>
+
 	<footer>
-		
+		<div class="logo-header">
+			<a href="../index.html">
+				<img class="picto-logo" src="../images/logo-txt.png" alt="Logo du Jardin Potager">
+			</a>
+		</div>
+		<h2>SOYONS  SOLIDAIRES  ET  NON  SOLITAIRES</h2>
+
+		<section class="allQuotes">
+			<div class="blockquote">
+				<p class="blockquote-content">“Un jour, dit la légende, il y eut un immense incendie de forêt. 
+					Tous les animaux terrifiés et atterrés, observaient impuissants le désastre.
+					Seul le petit colibri s’activait, allant chercher quelques gouttes d’eau dans son bec pour les jeter sur le feu.
+					Au bout d’un moment, le tatou, agacé par ses agissements dérisoires, lui dit :
+					<span>-”Colibri, tu n'es pas fou ? Tu crois que c’est avec ces quelques gouttes d’eau que tu vas éteindre le feu ?”</span>
+					<span>- “Qu’importe, répondit le colibri … je fais ma part.”</span></p>
+				<p class="blockquote-author">- Pierre Rabhi</p>
+			</div>
+		</section>
+
+		<section class="link">
+			<p><a href="./pages/galerie.html">Galerie</a></p>
+			<p><a href="./pages/bourse.html">Notre bon coin</a></p>
+			<p><a href="https://www.facebook.com/groups/348710417268671">Facebook</a></p>
+			<p><a href="https://www.youtube.com/channel/UC5xYo2Wz-glybwNWbY6y9dA">Youtube</a></p>
+			<p><a href="https://discord.gg/b2tM2G27">Discord</a></p>
+		</section>
 	</footer>
 	<script src="../js/menu_burger.js"></script>
 </body>
