--- a/index.html
+++ b/index.html
@@ -86,9 +86,11 @@
 			<h2 class="lil-margin-b">Notre Philosophie du Jardin</h2>
 			<p class="lil-margin-b">Né d’une démarche citoyenne, le Potager Partagé se base sur un sombre constat : Les crises que nous traversons et la société actuelle nous éloignent des choses primordiales de la vie. Le contact avec la faune et la flore, le respect de la nature, les liens sociaux sont autant de points qui se font de plus en plus rares.</p>
 			<p class="lil-margin-b">Il était temps pour nous de réagir, de faire notre part pour améliorer cela. Ce jardin collectif permet  à tous de retrouver un “nid douillet ”, un cadre verdoyant où l’aspect communautaire, le respect et le partage nous permettront de nous ressourcer.</p>
-			<img src="./images/lien-social-web.jpg" alt="">
-			<img src="./images/ruisseau-pont.jpg" alt="">
-			<img src="./images/ce-quapporte.png" alt="" class="mix-multiply">
+			<div class="philo-img">
+				<img src="./images/lien-social-web.jpg" alt="">
+				<img src="./images/ruisseau-pont.jpg" alt="">
+				<img src="./images/ce-quapporte.png" alt="" class="mix-multiply">
+			</div>
 
 		</section>
 
