--- a/pages/ateliers.html
+++ b/pages/ateliers.html
@@ -54,9 +54,11 @@
         <hr>
 
         <p class="lil-margin-b">Tout au long de ces ateliers, l’accent sera porté sur le respect de l'écologie et l’importance de la nature, de la terre et de l’eau. La mare et les zones de compostage seront également étudiées afin de souligner l’impact du recyclage et de la gestion des déchets.</p>
-        
-        <img src="../images/maman-enfant.jpg" alt="">
-        <img class="lil-margin-b" src="../images/deux-enfants.jpg" alt="">
+		
+		<div class="ateliers-maman">
+			<img src="../images/maman-enfant.jpg" alt="">
+			<img class="lil-margin-b" src="../images/deux-enfants.jpg" alt="">
+		</div>
 
 		<section class="ateliers">
 			<div class="ateliers-lighbg">
