--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Le Potager Partagé</title>
+	<title>L'Oasis Partagé</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -80,8 +80,6 @@
 			</div>
 		</section>
 
-		<hr>
-
 		<section class="philosophie">
 			<h2 class="lil-margin-b">Notre Philosophie du Jardin</h2>
 			<p class="lil-margin-b">Né d’une démarche citoyenne, le Potager Partagé se base sur un sombre constat : Les crises que nous traversons et la société actuelle nous éloignent des choses primordiales de la vie. Le contact avec la faune et la flore, le respect de la nature, les liens sociaux sont autant de points qui se font de plus en plus rares.</p>
@@ -93,8 +91,6 @@
 			</div>
 
 		</section>
-
-		<hr>
 
 		<section class="goals">
 			<h2 class="lil-margin-b">Nos Objectifs</h2>
@@ -115,7 +111,7 @@
 			</ul>
 		</section>
 
-		<hr>
+		<hr class="hr-footer">
 
 		<section class="actions">
 			<p class="lil-margin-b">Pour y parvenir, toutes les actions <span class="span-itl">(petites ou importantes)</span> ont leur importance :</p>
@@ -129,7 +125,7 @@
 			<p>... Toute idée peut nous aider, n’hésitez pas à nous la partager ! (Link vers formulaire/mail de contact /idée)</p>
 		</section>
 
-		<hr>
+		<hr class="hr-footer">
 
 		<section class="localisation">
 			<p class="adress lil-margin-b">Ce jardin extraordinaire se situe à la<span> rue Defuisseaux à 7333 TERTRE</span>.</p>
@@ -137,7 +133,7 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>		</section>
 	</main>
 
-	<hr>
+	<hr class="hr-footer">
 
 	<footer>
 		<div class="logo-header">
@@ -160,8 +156,8 @@
 		</section>
 
 		<section class="link">
-			<p><a href="./pages/galerie.html">Galerie</a></p>
-			<p><a href="./pages/bourse.html">Notre bon coin</a></p>
+			<p><a href="../pages/galerie.html">Galerie</a></p>
+			<p><a href="./pages/partages.html">Nos partages</a></p>
 			<p><a href="https://www.facebook.com/groups/348710417268671">Facebook</a></p>
 			<p><a href="https://www.youtube.com/channel/UC5xYo2Wz-glybwNWbY6y9dA">Youtube</a></p>
 			<p><a href="https://discord.gg/b2tM2G27">Discord</a></p>
