--- a/pages/compostez.html
+++ b/pages/compostez.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Compostez avec nous !</title>
+	<title>Compostez avec nous - L'Oasis Partagé</title>
 	<link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -35,7 +35,7 @@
 	</header>
 
 	<main>
-        <h1>Compostez avec nous !</h1>
+        <h1>Compostez avec nous</h1>
         <p class="lil-margin-b">Le compostage est utilisé par l’homme depuis des millénaires. Une des premières références à l'utilisation du compost en agriculture remonte à des tablettes d'argile gravées de l'​Empire Acadien en Mésopotamie​, mille ans avant Moïse​ ! Les Romains ​en connaissaient la technique, les Grecs et les tribus d'Israël en parlent. Les Chinois ont appliqué les principes du compostage de tout temps.</p>
         <p class="lil-margin-b">Le compost est un mélange de matières organiques en décomposition. Un savant équilibre d’azote et de carbone. En forêt, une plante dépérit, meurt et retourne à la terre en se décomposant sur place. Le sol se régénère ainsi, grâce à tous les débris végétaux devenant de l’humus.</p>
         
@@ -93,7 +93,7 @@
         </section>
     </main>
 
-	<hr>
+	<hr class="hr-footer">
 
 	<footer>
 		<div class="logo-header">
