--- a/pages/detendez.html
+++ b/pages/detendez.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,16 +43,16 @@
 
         <p class="lil-margin-b">Que ce soit pour bouquiner à l’ombre, parcourir le jardin,  faire une sieste ou bronzer au soleil à côté du petit étang, chacun peut y trouver son compte. Des chaises, des transats, table, parasol, barbecue permettront d’apprécier ce moment de quiétude en pleine nature.</p>
     
-        <p class="lil-margin-b">Cet espace est  un atout important pour apprécier la dolce vita, créer des liens, échanger et donc resserrer le tissu social. Le jardin reste un lieu parfait pour engager une conversation autour des plantes, fleurs et animaux qui y vivent … et qui sait ? susciter des vocations ?</p>
+        <p class="margin-b">Cet espace est  un atout important pour apprécier la dolce vita, créer des liens, échanger et donc resserrer le tissu social. Le jardin reste un lieu parfait pour engager une conversation autour des plantes, fleurs et animaux qui y vivent … et qui sait ? susciter des vocations ?</p>
 
-        <div class="lil-margin-b warning">Il vous sera demandé de garder vos animaux en laisse et de respecter la quiétude du jardin, pour le bien de tous.</div>
+        <p class="lil-margin-b value">Il vous sera demandé de garder vos animaux en laisse et de respecter la quiétude du jardin, pour le bien de tous.</p>
 
         <img src="../images/sieste-jardin.jpg" alt="">
 
     </main>
 
-	<hr>
-
+	<hr class="hr-footer">
+	
 	<footer>
 		<div class="logo-header">
 			<a href="../index.html">
