--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -42,30 +42,28 @@
 		<div class="customer-logos slider">
 			<div class="slide">
 			  	<img src="../images/slider/img-1.jpg" alt="Image d'un bac" class="img-responsive">
-				<p class="detail-img-slider">Bac</p>
 			</div>
 	
 			<div class="slide">
 			  <img src="../images/slider/img-2.jpg" alt="Image montrant de la paille" class="img-responsive">
-			  <p class="detail-img-slider">Pailles</p>
 			</div>
 	
 			<div class="slide">
-			  <img src="../images/slider/img-3.jpg" alt="" class="img-responsive">
+			  <img src="../images/slider/img-3.jpg" alt="Image d'un potiron" class="img-responsive">
 			</div>
 	
 			<div class="slide">
-			  <img src="../images/slider/img-4.jpg" alt="" class="img-responsive">
+			  <img src="../images/slider/img-4.jpg" alt="Image d'une courgette" class="img-responsive">
 			</div>
 	
 			<div class="slide">
-			  <img src="../images/slider/img-5.jpg" alt="" class="img-responsive">
+			  <img src="../images/slider/img-5.jpg" alt="Image d'une belle fleure rose" class="img-responsive">
 			</div>
 		</div>
 
     </main>
 
-	<hr>
+	<hr class="hr-footer">
 
 	<footer>
 		<div class="logo-header">
