--- a/pages/contact.html
+++ b/pages/contact.html
@@ -47,8 +47,6 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1269.7436387975033!2d3.813997483694909!3d50.469271704610875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5246e9eee42a5c05!2zNTDCsDI4JzA5LjQiTiAzwrA0OCc1My4yIkU!5e0!3m2!1sfr!2sfr!4v1656774599810!5m2!1sfr!2sfr" class="map" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>		</section>
 		</section>
 
-		<hr>
-
 		<section class="press-room">
 			<h2 class="lil-margin-b">Ils parlent de nous</h2>
 
@@ -64,7 +62,7 @@
 		</section>
     </main>
 
-	<hr>
+	<hr class="hr-footer">
 
 	<footer>
 		<div class="logo-header">
